updated for 2.0, added env LS_OPTS support for agent args, added a requirement file, travis & vagrantfile and more

--- a/templates/defaults.conf.j2
+++ b/templates/defaults.conf.j2
@@ -9,7 +9,7 @@
 #LS_HOME=/var/lib/logstash
 
 # Arguments to pass to logstash agent
-#LS_OPTS=""
+LS_OPTS="{{ logstash_opts }}"
 
 # Arguments to pass to java
 LS_HEAP_SIZE="{{ logstash_java_heap_size }}"
